--- a/finall/src/app/login/login.component.html
+++ b/finall/src/app/login/login.component.html
@@ -18,13 +18,22 @@
                                     </div>
                                     <form [formGroup]="loginForm" (ngSubmit)="login()" class="user">
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
+                                            <input type="email" formControlName="email" class="form-control form-control-user"
                                                 id="exampleInputEmail" aria-describedby="emailHelp"
                                                 placeholder="Enter Email Address...">
+
+                                                <div *ngIf="email.touched && email.invalid">
+                                                    <small class="text-danger" *ngIf="email.errors.required">Email is required</small>
+                                                    <small class="text-danger"  *ngIf="email.errors.email">Email is invalid</small>
+                                                </div>
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
+                                            <input type="password" formControlName="password"  class="form-control form-control-user"
                                                 id="exampleInputPassword" placeholder="Password">
+                                                <div *ngIf="password.touched && password.invalid">
+                                                  <small class="text-danger" *ngIf="password.errors.required" >Password is required</small>  
+                                                  <small class="text-danger" *ngIf="password.errors.minlength" >Password invalid</small>
+                                                </div>
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
